# esp32_lvgl

./: .gitignore  .gitmodules  CMakeLists.txt  fix_clangd_flags.py  idf.yaml  sdkconfig  sdkconfig.defaults
components/air_quality/: CMakeLists.txt  air_quality.c
components/air_quality/include/: air_quality.h
components/board/: Kconfig
components/board/include/: board.h
components/display/: CMakeLists.txt  bitwalk.c  display.c  fb_text.c  glyph_5x7.c
components/display/fonts/: glcdfont_5x7.c
components/display/include/: bitwalk.h  display.h  fb_text.h  glcdfont_5x7.h  glyph_5x7.h  rgb565.h
components/i2c_bus/: CMakeLists.txt  i2c_bus.c
components/i2c_bus/include/: i2c_bus.h
components/lvgl_conf/include/: lv_conf.h
components/scd4x/: CMakeLists.txt  scd4x.c
components/scd4x/include/: scd4x.h
components/scd4x/port/: sensirion_i2c_hal.c
components/sensors_ntc/: CMakeLists.txt  ntc_adc.c
components/sensors_ntc/include/: ntc_adc.h
components/sht20/: CMakeLists.txt  sht20.c
components/sht20/include/: sht20.h
components/stcc4/: CMakeLists.txt  stcc4.c
components/stcc4/include/: stcc4.h
components/ui/: CMakeLists.txt  Kconfig  ui.c
components/ui/include/: ui.h
main/: CMakeLists.txt  idf_component.yml
main/src/: main.c
